# getting-started

./: .concord.cfg  .gitignore  README.md  Vagrantfile  bootstrap_vagrant.sh  concord_container.bash  deploy.bash  linux_concord_container.bash  provision_vagrant.sh  reset_zookeeper.sh  tail_logs.bash
ansible/: dev.yml
concord_storm_wc/: runner.bash  sentence_generator.json  sentence_generator.rb  sentence_splitter.json  sentence_splitter.rb  word_counter.json  word_counter.rb
cpp/: .gitignore  CMakeLists.txt  README.md  SConstruct  compile.bash  sentence_generator.cc  sentence_generator.json  sentence_splitter.cc  sentence_splitter.json  word_counter.cc  word_counter.json  word_generator.cc  word_generator.json  word_source.cc  word_source.json
examples/: filter_imps.py
examples/click_rate_demo/: .concord.cfg  .gitignore  CMakeLists.txt  README.md  click.thrift  click_generator.cc  click_generator.json  compile.bash  ctr_calculator.cc  ctr_calculator.json  ctr_utils.hpp  generator.hpp  impression_generator.cc  impression_generator.json
examples/click_rate_demo/gen-cpp/: click_constants.cpp  click_constants.h  click_types.cpp  click_types.h
examples/click_rate_demo/include/: ctr_utils.hpp
examples/click_rate_demo/python/: ctr_calculator.json  ctr_calculator.py  generate_thrift.bash  runner.bash
examples/click_rate_demo/src/: ctr_calculator.cc  impression_generator.cc
examples/click_rate_demo/thrift/: click.thrift
go/: .gitignore  Makefile  counter.go  counter_manifest.json  main.go  producer.go  producer_manifest.json  sentence_generator.json  sentence_splitter.json  word_counter.json
java/: README.md  build.sbt  pre_package_concord.bash  sentence_generator.json  sentence_splitter.json  word_counter.json  word_source.json
jvm/: build.sbt  pre_package_concord.bash  runner.bash  word_counter.json  word_source.json
py/: .gitignore  activate  requirements.txt  runner.bash  sentence_generator.json  sentence_generator.py  sentence_splitter.json  sentence_splitter.py  word_counter.json  word_counter.py  word_source.json  word_source.py
rb/: Gemfile  runner.bash  sentence_generator.json  sentence_generator.rb  sentence_splitter.json  sentence_splitter.rb  word_counter.json  word_counter.rb  word_counter_cluster_deploy.json  word_counter_deploy.json  word_generator.rb  word_source.json  (+3 more)
(+53 files in other folders)
